RESOLVED FIXED Bug 168050
[GTK] UIScriptController::zoomToScale not implemented
https://bugs.webkit.org/show_bug.cgi?id=168050
Summary [GTK] UIScriptController::zoomToScale not implemented
Carlos Garcia Campos
Reported 2017-02-09 08:08:39 PST
Tests using it fail: fast/visual-viewport/rtl-zoomed-rects.html [ Failure ] fast/visual-viewport/zoomed-fixed-header-and-footer.html [ Failure ] fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html [ Failure ] fast/visual-viewport/zoomed-fixed.html [ Failure ] fast/visual-viewport/zoomed-rects.html [ Failure ] fast/zooming/client-rect-in-fixed-zoomed.html [ Failure ] fast/zooming/uiscript-zooming.html [ Failure ]
Attachments
Diego Pino
Comment 1 2023-07-05 19:00:09 PDT
EWS
Comment 2 2023-07-06 01:43:16 PDT
Committed 265793@main (74c3186fd1d7): <https://commits.webkit.org/265793@main> Reviewed commits have been landed. Closing PR #15585 and removing active labels.
Diego Pino
Comment 3 2023-07-06 03:22:08 PDT
Fixed by 265793@main
Diego Pino
Comment 4 2023-07-06 03:22:37 PDT
Fixed by 265793@main
Note You need to log in before you can comment on or make changes to this bug.