[GTK][WPE] UIScriptController::zoomToScale not implemented https://bugs.webkit.org/show_bug.cgi?id=168050

Reviewed by Carlos Garcia Campos.

Same implementation as WinCairo port.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Tools/WebKitTestRunner/gtk/UIScriptControllerGtk.cpp:
(WTR::UIScriptControllerWPE::zoomToScale):
(WTR::UIScriptControllerWPE::zoomScale const):
* Tools/WebKitTestRunner/gtk/UIScriptControllerGtk.h:
* Tools/WebKitTestRunner/wpe/UIScriptControllerWPE.cpp:
(WTR::UIScriptControllerWPE::zoomToScale):
(WTR::UIScriptControllerWPE::zoomScale const):
* Tools/WebKitTestRunner/wpe/UIScriptControllerWPE.h:

Canonical link: https://commits.webkit.org/265793@main